# feba66_apps

./: README.md  pyproject.toml  workspace.toml
bases/feba66_apps/sample_app/: __init__.py
bases/feba66_apps/user_app/: __init__.py
components/feba66_apps/hello/: __init__.py
projects/sample_app/: pyproject.toml
projects/user_app/: pyproject.toml
test/bases/feba66_apps/sample_app/: test_core.py
test/bases/feba66_apps/user_app/: test_core.py
test/components/feba66_apps/hello/: test_core.py
