[tool.poetry]
name = "user_app"
version = "0.1.0"
description = ""
authors = ["Felix Baumkötter <contact@feba66.de>", "Jonathan Sigrist"]
license = ""

packages = []

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
